[package]
name = "auction"
version = "2.0.0"
authors = ["apemon <apemon642002@hotmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.5.3", features = ["stargate"] }
cosmwasm-storage = { version = "1.5.2"  }
schemars = "0.8.16"
serde = { version = "1.0.156", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw721 = { workspace = true }
cw2981-royalties = { version = "0.18.0"}
cw-utils = { version = "1.0.3"}
cw20 = { version = "1.1.2" }
cw-storage-plus = { version = "1.2.0" }
marketplace = { workspace = true }
terraswap = { version = "2.9.0" }
cosmwasm-schema = { version = "2.0.0" }

[dev-dependencies]
cw-multi-test = "0.13.2"
