[package]
name        = "open-edition-minter"
authors     = ["Racoon Supply <racoon.supply.nft@gmail.com>",
   "A Hardnett <returniflost@skiff.com>",]
description = "Terp open edition minter contract"
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema         = { workspace = true }
cosmwasm-std            = { workspace = true }
cw2                     = { workspace = true }
cw721-base              = { workspace = true, features = ["library"] }
cw-storage-plus         = { workspace = true }
cw-utils                = { workspace = true }
serde                   = { workspace = true }
terp-fee                  = { workspace = true }
factory-utils                     = { workspace = true }
minter-utils                     = { workspace = true }
terp721                   = { workspace = true }
terp-sdk                  = { workspace = true }
terp-metadata             = { workspace = true }
thiserror               = { workspace = true }
url                     = { workspace = true }
open-edition-factory    = { workspace = true, features = ["library"] }
semver                  = {workspace = true }
